# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [API_PARSER] [WAF_CLOUDFLARE] Avoid querying the API with data from more than a week ago


## [2.23.0] - 2025-03-28
### Added
- [SYSTEM] [PATHS] Variabilize all system paths and allow to configure them from settings
- [SYSTEM] [SETTINGS] Allow to configure project with django-environ
- [TESTS] [SYSTEM] Implement Network test cases
- [TESTS] [WORKFLOW] Implement Workflow test cases
- [API_PARSER] [GATEWATCHER_ALERTS] Add 'host' field in json logs (requested url's domain)
- [API_PARSER] [ARMIS_CENTRIX] New collector for Armis Centrix EDR (Alerts & Activity)
- [TIMEZONE] Allow to calculate current timezone offset for logs received on a Frontend
- [COMMANDS] Add a command to manually regenerate the new timezone DBs for Rsyslog
### Removed
- [TESTS] Remove old 'testing' folder
### Changed
- [SYSTEM] [SETTINGS] Use Hostname value from Django settings
- [PKI] Generate a random serial for each new certificate
- [API_PARSER] [VARONIS] Change the format of logs to avoid empty fields and to make the parsing easier
- [API_PARSER] [VARONIS] DElay next request when receiving 304 errors
- [COMMANDS] Ensure logs are written on stdout as well as in corresponding logging files
### Fixed
- [SERVICES] [FRONTEND] Only show node field for specific modes
- [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
- [API_PARSER] [WAF_CLOUDFLARE] Fix invalid time range requested for UTC-* consoles
- [API_PARSER] [WAF_CLOUD_PROTECTOR] Catch invalid lines + fix timestamp handling
- [SYSTEM] [PKI] Missing SAN
- [SERVICES] Use 'onestatus' to establish if a service is running
- [SERVICES] [FILEBEAT] Improve how service and Filebeat processes' status are shown on GUI